<resources>
    <string name="app_name">EletricCarApp</string>
    <string name="electric_car">Electric Car</string>
    <string name="carro">Carro</string>
    <string name="favorito">Favorito</string>
    <string name="pre_o">Preço</string>
    <string name="value_preco">R$ 200.000,00</string>
    <string name="todo">TODO</string>
    <string name="bateria">Bateria</string>
    <string name="potencia">Potência</string>
    <string name="recarga">Recarga</string>
    <string name="pre_o_por_kwh">Preço por kWh</string>
    <string name="km_percorrido">Km Percorrido</string>
    <string name="calcular">Calcular</string>
    <string name="calcular_autonomia">Calcular Autonomia</string>
    <string name="no_wifi">Ops, Internet não disponível ):</string>
    <string name="error">Algo deu errado, por favor tente novamente mais tarde </string>
    <string name="save_calc">save_calc</string>
</resources>