<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".presentation.MainActivity">


    <TextView
        android:id="@+id/tv_titulo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:textSize="24sp"
        style="@style/TextAppearance.AppCompat.Headline"

        android:text="@string/electric_car"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tv_carro"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/carro"
        style="@style/TextAppearance.AppCompat.Body2"
        android:textStyle="bold"
        android:layout_margin="16dp"
        app:layout_constraintTop_toBottomOf="@id/tv_titulo"
        app:layout_constraintStart_toStartOf="parent"
        />

    <TextView
        android:id="@+id/tv_favorito"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/favorito"
        style="@style/TextAppearance.AppCompat.Body2"
        android:textStyle="bold"
        app:layout_constraintStart_toEndOf="@id/tv_carro"
        app:layout_constraintTop_toTopOf="@id/tv_carro"
        android:layout_marginStart="16dp"
        tools:layout_editor_absoluteX="0dp"
        tools:layout_editor_absoluteY="16dp"
        />




    <Button
        android:id="@+id/btn_cacular"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/calcular"
        android:layout_marginTop="10dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        />
    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rv_list_car"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
        app:layout_constraintTop_toBottomOf="@id/tv_favorito"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toTopOf="@id/btn_cacular"
        tools:listitem="@layout/carro_item"/>






</androidx.constraintlayout.widget.ConstraintLayout>