<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">


    <androidx.cardview.widget.CardView
        android:id="@+id/cv_car"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        app:cardCornerRadius="24dp"
        android:elevation="16dp"
        app:cardBackgroundColor="@color/gray"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

         <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/cl_card_content"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
             tools:ignore="MissingConstraints">

            <ImageView
                android:id="@+id/iv_image"
                android:layout_width="380dp"
                android:layout_height="110dp"
                android:layout_marginTop="16dp"
                android:contentDescription="@string/todo"
                android:src="@drawable/car_electric"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                />
            <TextView
                android:id="@+id/tv_preco"
                android:layout_width="70dp"
                android:layout_height="wrap_content"
                style="@style/TextAppearance.AppCompat.Body2"
                app:layout_constraintTop_toBottomOf="@id/iv_image"
                app:layout_constraintStart_toStartOf="parent"
                android:layout_marginStart="16dp"
                android:text="@string/pre_o" />
            <TextView
                android:id="@+id/tv_preco_value"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                style="@style/TextAppearance.AppCompat.Body1"
                android:layout_marginStart="16dp"
                app:layout_constraintTop_toBottomOf="@id/iv_image"
                app:layout_constraintStart_toEndOf="@id/tv_preco"
                android:text="@string/value_preco" />

            <TextView
                android:id="@+id/tv_bateria"
                android:layout_width="70dp"
                android:layout_height="wrap_content"
                style="@style/TextAppearance.AppCompat.Body2"
                app:layout_constraintTop_toBottomOf="@id/tv_preco"
                app:layout_constraintStart_toStartOf="parent"
                android:layout_marginStart="16dp"
                android:text="@string/bateria" />
            <TextView
                android:id="@+id/tv_bateria_value"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                style="@style/TextAppearance.AppCompat.Body1"
                android:layout_marginStart="16dp"
                app:layout_constraintTop_toBottomOf="@id/tv_preco"
                app:layout_constraintStart_toEndOf="@id/tv_preco"
                android:text="95 kWz" />

            <TextView
                android:id="@+id/tv_potencia"
                android:layout_width="70dp"
                android:layout_height="wrap_content"
                style="@style/TextAppearance.AppCompat.Body2"
                app:layout_constraintTop_toBottomOf="@id/tv_bateria"
                app:layout_constraintStart_toStartOf="parent"
                android:layout_marginStart="16dp"
                android:text="@string/potencia" />
            <TextView
                android:id="@+id/tv_potencia_value"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                style="@style/TextAppearance.AppCompat.Body1"
                android:layout_marginStart="16dp"
                app:layout_constraintTop_toBottomOf="@id/tv_bateria"
                app:layout_constraintStart_toEndOf="@id/tv_potencia"
                android:text="320cv" />

            <TextView
                android:id="@+id/tv_recarga"
                android:layout_width="70dp"
                android:layout_height="wrap_content"
                style="@style/TextAppearance.AppCompat.Body2"
                app:layout_constraintTop_toBottomOf="@id/tv_potencia"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintBottom_toBottomOf="@id/cl_card_content"
                android:layout_marginStart="16dp"
                android:layout_marginBottom="16dp"
                android:text="@string/recarga" />
            <TextView
                android:id="@+id/tv_recarga_value"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                style="@style/TextAppearance.AppCompat.Body1"
                app:layout_constraintTop_toBottomOf="@id/tv_potencia"
                app:layout_constraintStart_toEndOf="@id/tv_recarga"
                android:layout_marginStart="16dp"
                android:text="23 min" />

         </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.cardview.widget.CardView>

</androidx.constraintlayout.widget.ConstraintLayout>

